# benchcomp

./: pyproject.toml
src/benchcomp/: __main__.py  common.py  compare.py  console_renderer.py  core.py  json_serializer.py  parser_cli.py  parser_common.py  parser_macrobenchmark.py
tests/: test_compare.py  test_parser_macrobenchmark.py
