[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchcomp"
version = "1.0.0"
authors = [
    {name = "Frozen Bytes"},
]
description = "A CLI tool that compares Android Macrobenchmark results to detect performance regressions. "
requires-python = ">=3.10"
dependencies = [
    "scipy",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Repository = "https://github.com/Frozen-Bytes/benchcomp"
Issues = "https://github.com/Frozen-Bytes/benchcomp/issues"


[project.scripts]
benchcomp = "benchcomp.__main__:main"
